# flow-forge

./: README.md  compatibility-audit.md  flowforge-proto-architecture.md  package.json  untitled.flow  user-research-report.md  vite.config.ts
.workbuddy/memory/: 2026-06-25.md  2026-06-26.md  2026-07-05.md  MEMORY.md
cli/lib/: gen-csharp.cjs
cli/output/csharp/: FlowStartNode.gen.cs
deliverables/: flowforge-i18n-design.md  type-management-philosophy.md
deliverables/product-strategy/: prd-flow-editor-game-dev-2026-06-25.md
deliverables/requirements/: ui-layout-requirements.md
deliverables/specification/: functional-specification.md
flowforge-proto/: package-lock.json  tsconfig.node.json
flowforge-proto/cli/: generate.cjs
flowforge-proto/cli/lib/: gen-typescript.cjs  types.cjs
flowforge-proto/runtime/cs/: INodeDataReceiver.cs  INodeHandler.cs  IWireOuts.cs  NodeStatus.cs  Param.cs
flowforge-proto/server/: index.cjs  sample.flow.json
flowforge-proto/src/: App.tsx  index.css
flowforge-proto/src-tauri/capabilities/: default.json
flowforge-proto/src-tauri/icons/: icon.icns
flowforge-proto/src-tauri/src/: lib.rs  main.rs
flowforge-proto/src/api/: fileApi.ts
flowforge-proto/src/data/: builtinNodes.ts  flowTypes.ts
flowforge-proto/src/i18n/: index.ts
flowforge-proto/src/screens/: LandingScreen.tsx
flowforge-proto/src/store/: appStore.ts  configStore.ts  editorMetaStore.ts  editorStore.ts
runtime/cs/: IRuntime.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/i18n/: types.ts
src/store/: editorStore.ts
(+37 files in other folders)
