[package]
name = "flowforge-proto"
version = "0.1.0"
description = "FlowForge — 游戏开发节点式可视化流程编辑器"
authors = ["FlowForge Team"]
edition = "2021"

[lib]
name = "flowforge_proto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
